package contenido.Week08.JuegoAjedrez;

public class Tablero {
    public Pieza[][] tamanoTablero;

    public Tablero() {
        this.tamanoTablero = new Pieza[8][8];
    }
}
